--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <i class="fas fa-lightbulb"></i>
                     </button>
                     <button class="filter-btn" data-filter="odor" title="냄새" aria-label="냄새 데이터만">
-                        <i class="fas fa-nose"></i>
+                        <i class="fas fa-wind"></i>
                     </button>
                     <button class="filter-btn" data-filter="crowd" title="혼잡도" aria-label="혼잡도 데이터만">
                         <i class="fas fa-users"></i>
